--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,11 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    <script src="js/jquery-1.7.min.js"></script>
+    <script src="js/underscore-min.js"></script>
+    <script src="js/backbone-min.js"></script>
+    <script src="js/messaging.js"></script>
+    <script src="js/main.js"></script>
   </head>
 
   <body>
