--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
     <script src="js/messaging.js"></script>
+    <script src="js/router.js"></script>
     <script src="js/main.js"></script>
   </head>
 
