--- a/web/index.html
+++ b/web/index.html
@@ -23,9 +23,15 @@
     <script src="js/jquery-1.7.min.js"></script>
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
+
+    <script type="text/javascript" src="http://127.0.0.1:55670/rabbitmq_lib/jsonrpc.js"></script>
+    <script type="text/javascript" src="http://127.0.0.1:55670/rabbitmq_lib/rabbitmq.js"></script>
+    <script type="text/javascript" src="http://127.0.0.1:55670/rabbitmq_lib/rabbitmq-jquery.js"></script>
+
     <script src="js/messaging.js"></script>
-    <script src="js/router.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/router.js"></script>
+
   </head>
 
   <body>
