--- a/web/index.html
+++ b/web/index.html
@@ -24,9 +24,9 @@
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
 
-    <script type="text/javascript" src="http://127.0.0.1:55670/rabbitmq_lib/jsonrpc.js"></script>
-    <script type="text/javascript" src="http://127.0.0.1:55670/rabbitmq_lib/rabbitmq.js"></script>
-    <script type="text/javascript" src="http://127.0.0.1:55670/rabbitmq_lib/rabbitmq-jquery.js"></script>
+    <script type="text/javascript" src="/rabbitmq_lib/jsonrpc.js"></script>
+    <script type="text/javascript" src="/rabbitmq_lib/rabbitmq.js"></script>
+    <script type="text/javascript" src="/rabbitmq_lib/rabbitmq-jquery.js"></script>
 
     <script src="js/messaging.js"></script>
     <script src="js/main.js"></script>
